<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/region_sp"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/spin_region"
            android:entries="@array/different_region"
            android:gravity="center"
            />
        <Spinner
            android:id="@+id/newest_sp"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/spin_newest"
            android:entries="@array/more"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/sex_sp"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/spin_sex"
            android:entries="@array/sex_all"
            android:gravity="center"/>
    </LinearLayout>
    <ListView
        android:id="@+id/user_show_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>